Definitely added Base64 encoding support - no fancy checking though etc.